testdata/baselines/reference/submodule/conformance/jsdocImplements_missingType.errors.txt
/a.js(1,32): error TS2339: Property 'x' does not exist on type 'A'.


==== /a.js (1 errors) ====
    class A { constructor() { this.x = 0; } }
                                   ~
!!! error TS2339: Property 'x' does not exist on type 'A'.
    /** @implements */
    class B  {
    }
    